--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             background-color:#cc0000;
             color: white;
             padding: 1px 10px 10px 10px;
+            margin-left: -10em;
+            margin-right: -10em;
         }
         figcaption {
             color: black;
