--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             padding: 1px 10px 10px 10px;
             margin-left: -10em;
             margin-right: -10em;
+            padding-left: 10em;
+            padding-right: 10em;
         }
         figcaption {
             color: black;
