--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         body {
             font-family: Raleway;
             margin: auto;
-            padding: 0 1em;
         }
         .main-content {
             max-width: 100%;
@@ -23,13 +22,6 @@
         }
         #header p {
             font-size: 1.5em;
-        }
-        #cc-linked-photo {
-            display: block;
-            text-align: center;
-        }
-        #cesar-chavez-photo {
-            text-align: center;
         }
         a:link {
             color: crimson;
@@ -66,12 +58,12 @@
     <body>
         <div class="container-fluid">
             
-            <div id="header">
-                <h1 class="text-center" id="heading">Cesar Chavez</h1>
-                <p class="text-center"><em>An American farm worker, labor leader, and civil rights activist</em></p>
-                <div id="cesar-chavez-photo">
+            <div id="header" class="text-center">
+                <h1 id="heading">Cesar Chavez</h1>
+                <p><em>An American farm worker, labor leader, and civil rights activist</em></p>
+                <div>
                     <figure class="img-thumbnail">
-                        <a id="cc-linked-photo" target="_blank"  href="http://www.saccounty.net/news/latest-news/Pages/Cesar-Chavez-Day-Set-to-Be-Annual-County-Holiday-.aspx"><img class="img-responsive center-block" target="_blank"  src="http://www.saccounty.net/news/latest-news/PublishingImages/cesar%20chavez%202.jpg" alt="Cesar Chavez Headshot With People Sitting Behind Him"></a>
+                        <a target="_blank"  href="http://www.saccounty.net/news/latest-news/Pages/Cesar-Chavez-Day-Set-to-Be-Annual-County-Holiday-.aspx"><img class="img-responsive center-block" target="_blank"  src="http://www.saccounty.net/news/latest-news/PublishingImages/cesar%20chavez%202.jpg" alt="Cesar Chavez Headshot With People Sitting Behind Him"></a>
                         <figcaption  class="text-center">Co-founder of <a target="_blank"  href="https://en.wikipedia.org/wiki/United_Farm_Workers">United Farm Workers</a> with <a target="_blank"  href="https://en.wikipedia.org/wiki/Dolores_Huerta">Dolores Huerta</a></figcaption>
                     </figure>
                 </div>
