--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: auto;
         }
         .main-content {
+            max-width: 100%;
             margin: auto;
         }
         #heading {
