--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         }
         .main-content {
             margin: auto;
+            max-width: 100%;
         }
         #heading {
             text-decoration: underline;
@@ -44,11 +45,6 @@
         #header {
             background-color:#cc0000;
             color: white;
-            padding: 1px 10px 10px 10px;
-            margin-left: -10em;
-            margin-right: -10em;
-            padding-left: 10em;
-            padding-right: 10em;
         }
         figcaption {
             color: black;
