--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         #header {
             background-color:#cc0000;
             color: white;
+            padding-bottom: 1em;
+            padding-top: 1em;
+            margin: -15px;
         }
         figcaption {
             color: black;
